ORM setup , some bug with apache ovveride have to manually clear dev cache

--- a/Symfony/my_project/templates/default/index.html.twig
+++ b/Symfony/my_project/templates/default/index.html.twig
@@ -20,7 +20,7 @@
 
     <ul>
         {% for user in users %}
-            <li>{{user}}</li>
+            <li>{{user.name}}</li>
         {% endfor %}
     </ul>
 </div>
@@ -30,7 +30,7 @@
 
 <script>
 
-alert('ArteNauta')
+// alert('ArteNauta')
 
 </script>
 
